# anonymize

./: .env.example  .gitignore  .ignore  BUILD_DISTRIBUTION.md  DISTRIBUTION_READY.md  README.md  USAGE_GUIDE.md  anonymize.spec  build.ps1  build.sh  generate_test_data.py  hook-en_core_web_lg.py  hook-en_core_web_md.py  hook-en_core_web_sm.py  main.py  pyproject.toml  setup.ps1  setup.py  setup.sh
.devcontainer/: devcontainer.json  post-start.sh
config/: default_config.yaml
docs/ai/: design_pii_anonymization.md  llm_second_pass_implementation_plan.md  pii_recognizer_implementation_plan.md  presidio_redundancy_analysis.md  simplification_summary.md
examples/: sample_input.txt
src/: __init__.py  cli.py  llm.py  models.py  utils.py
src/anonymizers/: __init__.py  base_anonymizer.py  faker_anonymizer.py  hash_anonymizer.py  masker.py  redactor.py
src/config/: __init__.py  config_manager.py
src/processors/: __init__.py  csv_processor.py  file_processor.py  pii_detection.py
tests/: conftest.py  test_anonymizers.py  test_integration.py  test_llm.py
tests/fixtures/: australian_pii_samples.txt
